--- a/index.html
+++ b/index.html
@@ -8,10 +8,39 @@
 </head>
 
 <body>
+
+  <main></main>
    <template>
       <section>
+
+      <div class="left-side">
+<img src="imgs/stitch.jpg" class="character-img">
        <h2></h2>
-       <p class=""
+       <h4>Nationality</h4>
+       <p class="nationality"></p>
+       <h4>occupation</h4>
+       <p class="occupation"></p>
+       <h4>appearance</h4>
+       <p class="appearance"></p>
+       <h4>zodiac sign</h4>
+       <p class="zodiacsign"></p>
+
+       </div>
+
+       <div class="right-side">
+
+      <h4>powers</h4>
+       <p class="powers"></p>
+       <h4>likes</h4>
+       <p class="likes"></p>
+       <h4>dislikes</h4>
+       <p class="dislikes"></p>
+       <h4>personality</h4>
+       <p class="personality"></p>
+       <h4>famous quotes</h4>
+       <p class="famousquotes"></p>
+
+       </div>
        </section>
    </template>
     <script src="main.js"></script>
