--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 
 <body>
-
+ 
+  <header>
+		   <img class="image" src="website.header2.jpg">
+	    	<div class="navbar">
+		    <ul>
+		    <li>
+			<a href="#">Home</a></li>
+		    <li>
+			<a href="#">All Characters</a></li>
+		    <li>
+			<a href="#">About</a></li>
+		    <li>
+			<a href="#">Quiz</a></li>
+		    </ul>
+        	</div>
+	</header>
+	
   <main></main>
    <template>
       <section>
@@ -43,6 +59,12 @@
        </div>
        </section>
    </template>
+   
+   <footer>
+		<!--<img src="footer.jpg" class="footer-img">-->
+		<h4 class="footer-text">such error 404</h4>
+	</footer>
+   
     <script src="main.js"></script>
 </body>
 </html>
