--- a/index.html
+++ b/index.html
@@ -26,45 +26,31 @@
 	</header>
 	
   <main></main>
+ 
    <template>
-      <section>
-
-      <div class="left-side">
-<img src="imgs/stitch.jpg" class="character-img">
-       <h2></h2>
-       <h4>Nationality</h4>
-       <p class="nationality"></p>
-       <h4>occupation</h4>
-       <p class="occupation"></p>
-       <h4>appearance</h4>
-       <p class="appearance"></p>
-       <h4>zodiac sign</h4>
-       <p class="zodiacsign"></p>
-
-       </div>
-
-       <div class="right-side">
-
-      <h4>powers</h4>
-       <p class="powers"></p>
-       <h4>likes</h4>
-       <p class="likes"></p>
-       <h4>dislikes</h4>
-       <p class="dislikes"></p>
-       <h4>personality</h4>
-       <p class="personality"></p>
-       <h4>famous quotes</h4>
-       <p class="famousquotes"></p>
-
-       </div>
-       </section>
+    
+	<div class="row__inner">
+    <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-1.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            Top Gear
+          </div>
+        </div>
+      </div>
+      </div>
+   
    </template>
    
+  
+  
    <footer>
 		<!--<img src="footer.jpg" class="footer-img">-->
 		<h4 class="footer-text">such error 404</h4>
 	</footer>
    
-    <script src="main.js"></script>
+    <script src="try_out.js"></script>
 </body>
 </html>
